FTB-Community/force-app/main/default/objects/FTB_Player__c/FTB_Player__c.object-meta.xml
<CustomObject>
    <description>FTB Object to register player to select during championship</description>
    <label>Player</label>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>