FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_Blocks__c.field-meta.xml
<CustomField>
    <fullName>FTB_Blocks__c</fullName>
    <label>Blocks (AVG)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>