FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>FTB_DateOfBirth__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>