FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_FieldPercentage__c.field-meta.xml
<CustomField>
    <fullName>FTB_FieldPercentage__c</fullName>
    <label>Field Percentage</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>