FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_FirstName__c.field-meta.xml
<CustomField>
    <fullName>FTB_FirstName__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>