FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_FullName__c.field-meta.xml
<CustomField>
    <fullName>FTB_FullName__c</fullName>
    <formula>UPPER(FTB_FirstName__c) &amp; &quot; &quot; &amp;  UPPER(FTB_LastName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>