FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_Height__c.field-meta.xml
<CustomField>
    <fullName>FTB_Height__c</fullName>
    <label>Height (USA)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>