FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_HeightEu__c.field-meta.xml
<CustomField>
    <fullName>FTB_HeightEu__c</fullName>
    <label>Height (EU)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>