FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_IsActive__c.field-meta.xml
<CustomField>
    <fullName>FTB_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>