FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_Jersey__c.field-meta.xml
<CustomField>
    <fullName>FTB_Jersey__c</fullName>
    <label>Jersey</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>