FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_LastName__c.field-meta.xml
<CustomField>
    <fullName>FTB_LastName__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>