FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_PersonId__c.field-meta.xml
<CustomField>
    <fullName>FTB_PersonId__c</fullName>
    <externalId>true</externalId>
    <label>Person Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>