FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_Score__c.field-meta.xml
<CustomField>
    <fullName>FTB_Score__c</fullName>
    <label>Score (AVG)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>