FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_Steals__c.field-meta.xml
<CustomField>
    <fullName>FTB_Steals__c</fullName>
    <label>Steals (AVG)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>