FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_Team__c.field-meta.xml
<CustomField>
    <fullName>FTB_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>FTB_Team__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>FTB_Players</relationshipName>
    <type>Lookup</type>
</CustomField>