FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_TeamId__c.field-meta.xml
<CustomField>
    <fullName>FTB_TeamId__c</fullName>
    <externalId>true</externalId>
    <label>Team Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>