FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_TotalRebounds__c.field-meta.xml
<CustomField>
    <fullName>FTB_TotalRebounds__c</fullName>
    <formula>FTB_DefensiveRebound__c + FTB_OffensiveRebound__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rebounds (AVG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>