FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_WeightKg__c.field-meta.xml
<CustomField>
    <fullName>FTB_WeightKg__c</fullName>
    <label>Weight (kg)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>