FTB-Community/force-app/main/default/objects/FTB_Player__c/fields/FTB_WeightPounds__c.field-meta.xml
<CustomField>
    <fullName>FTB_WeightPounds__c</fullName>
    <label>Weight (Pounds)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>