FTB-Community/force-app/main/default/objects/FTB_Player__c/listViews/FTB_LV_Players.listView-meta.xml
<ListView>
    <fullName>FTB_LV_Players</fullName>
    <columns>FTB_FirstName__c</columns>
    <columns>FTB_LastName__c</columns>
    <columns>FTB_Position__c</columns>
    <columns>FTB_HeightEu__c</columns>
    <columns>FTB_WeightKg__c</columns>
    <columns>FTB_IsActive__c</columns>
    <columns>FTB_FieldPercentage__c</columns>
    <columns>FTB_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Players</label>
</ListView>